fix shop alignment

--- a/public/css/fetish-priest.css
+++ b/public/css/fetish-priest.css
@@ -82,7 +82,6 @@ body {
 .jctkr-wrapper ul li{
   display: inline-block;
   font-size: 8px;
-  font-family: sans-serif;
 }
 
 .jctkr-wrapper ul li a{
@@ -255,7 +254,7 @@ img {
    	float: left;
    	cursor: pointer;
    	font-size: 0.75vw;
-   	/*line-height: 0.8vw;*/
+   	line-height: 0.75vw;
 }
 
 .shop p:hover {
